--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "irecommend-demo",
+  "name": "nodehill",
   "version": "1.0.0",
   "description": "licheng's nodejs",
   "main": "./bin/www",
@@ -30,5 +30,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "licheng",
-  "license": "ISC"
+  "license": "MIT"
 }
