--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^2.0.0",
     "body-parser": "^1.12.4",
+    "canvas": "^1.4.0",
     "co": "^4.6.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^0.8.2",
@@ -16,6 +17,7 @@
     "express": "^4.12.4",
     "express-session": "^1.14.0",
     "log4js": "^0.6.38",
+    "moment": "^2.14.1",
     "morgan": "^1.5.3",
     "mysql": "^2.11.1",
     "nodemailer": "^1.11.0",
@@ -23,7 +25,8 @@
     "promise": "^6.1.0",
     "sequelize": "^3.23.6",
     "serve-favicon": "^2.2.1",
-    "sqlite3": "^3.1.4"
+    "sqlite3": "^3.1.4",
+    "verify-code": "^0.1.6"
   },
   "devDependencies": {},
   "scripts": {
