--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "async": "^2.0.0",
     "body-parser": "^1.12.4",
     "canvas": "^1.4.0",
+    "captcha": "0.0.4",
     "co": "^4.6.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^0.8.2",
+    "connect-redis": "^3.1.0",
     "connect-sequelize": "^1.0.8",
     "cookie-parser": "^1.3.5",
     "debug": "^2.1.3",
@@ -24,9 +26,11 @@
     "pg": "^6.0.3",
     "promise": "^6.1.0",
     "sequelize": "^3.23.6",
+    "sequelstore-connect": "^1.1.5",
     "serve-favicon": "^2.2.1",
     "sqlite3": "^3.1.4",
-    "verify-code": "^0.1.6"
+    "verify-code": "^0.1.6",
+    "winston": "^2.2.0"
   },
   "devDependencies": {},
   "scripts": {
