--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "cookie-parser": "^1.3.5",
     "debug": "^2.1.3",
     "ejs": "^2.3.4",
+    "encoding": "^0.1.12",
     "express": "^4.12.4",
     "express-session": "^1.14.0",
+    "extend": "^3.0.0",
     "log4js": "^0.6.38",
     "moment": "^2.14.1",
     "morgan": "^1.5.3",
@@ -29,6 +31,7 @@
     "sequelstore-connect": "^1.1.5",
     "serve-favicon": "^2.2.1",
     "sqlite3": "^3.1.4",
+    "utf8": "^2.1.1",
     "verify-code": "^0.1.6",
     "winston": "^2.2.0"
   },
